stylesheets/stylesheet.css
/* ... */
  .main-content table th {
    font-weight: bold; }
  .main-content table th, .main-content table td {
    padding: 0.5rem 1rem;
    border: 1px solid #e9ebec; }
.main-content dl {
  padding: 0; }
  .main-content dl dt {
    padding: 0;
    margin-top: 1rem;
    font-size: 1rem;
    font-weight: bold; }
  .main-content dl dd {
    padding: 0;
    margin-bottom: 1rem; }
.main-content hr {
  height: 2px;
  padding: 0;
  margin: 1rem 0;
  background-color: #eff0f1;
  border: 0; }

/* MAIN CONTENT media queries */
@media screen and (min-width: 64em) {
  .main-content {
    max-width: 64rem;
    padding: 2rem 6rem;
    margin: 0 auto;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .main-content {
    padding: 2rem 4rem;
  }
  .main-content ul {
    padding-left: 20px;
  }
}

@media screen and (max-width: 42em) {
  .main-content {
    padding: 2rem 1rem;
    font-size: 1rem;
  }
  .main-content p {
  margin-bottom: 1em;
  flex-basis: auto; }
  .main-content ul {
    padding-left: 20px;
  }
}



/* === MAIN CONTENT FLEX GRID === */
.row {
  width: 100%;
  padding: 3rem 0 1rem;
  border-bottom: solid 1px #eff0f1;
  display: flex;
  display: -webkit-flex;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  justify-content: space-between;
  -webkit-justify-content: space-between;
}
.row:first-of-type {
  padding-top: 1.5rem;
}
.row > .column {
  flex: 1 0 0;
  -webkit-flex: 1 0 0;
  padding: 0 1rem;
  margin-bottom: 1rem;
}
.row div:first-of-type {
  padding-left: 0;
}
.row div:last-of-type {
  padding-right: 0;
}
.column.tutorials a:hover {
  border: none;
  opacity: 0.7;
}
.column > .video,
.column > .img_slider {
  /*margin-right: 1rem;*/
}

/* MAIN CONTENT FLEX GRID media queries */
/*@media screen and (max-width: 42em) {*/
@media screen and (max-width: 768px) {
  .row {
    flex-flow: column;
    -webkit-flex-flow: column;
    justify-content: center;
    -webkit-justify-content: center;
  }
  .row > .column {
    padding: 0 1rem!important;
    flex: 0;
    -webkit-flex: 0;
  }
  .column > .video,
  .column > .img_slider {
    margin-right: 0;
  }
  .column.tutorials {
    margin: 0 auto 1rem;
    max-width: 400px;
  }
}



/* === FOOTER === */
.site-footer {
  padding-top: 2rem;
  margin-top: 2rem;
  border-top: solid 1px #eff0f1;
}

.site-footer-owner {
  display: block;
  font-weight: bold;
  margin-bottom: 1rem;
}

.site-footer-credits {
  color: #819198;
  font-size: .8rem;
  float: left;
  max-width: 50%;
  margin: 1rem 0;
}

.site-footer img {
  max-width: 280px;
  float: right;
}

/* FOOTER media queries */
@media screen and (min-width: 64em) {
  .site-footer {
    font-size: 1rem;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .site-footer {
    font-size: 1rem;
  }
}

@media screen and (max-width: 42em) {
  .site-footer {
    font-size: 0.9rem;
    text-align: center;
  }
  .site-footer-credits {
    clear: both;
    float: none;
    text-align: center;
    max-width: 100%;
  }
  .site-footer img {
    clear: both;
    float: none;
  }
}



/* === EMBED === */
.embed-container {
  position: relative;
  padding-bottom: 56.25%!important;
  height: 0;
  overflow: hidden;
  max-width: 100%!important;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-width: 100%!important;
  max-height: 700px!important;
}

/*iframe, object, embed {
  max-width: 100%!important;
  max-height: 700px!important;
  margin: 0 auto;
  display: block;
  flex-basis: 100%;
}*/

@media screen and (max-width: 42em) {
  .embed-container iframe,
  .embed-container object,
  .embed-container embed {
    max-width: 100%!important;
    max-height: 300px!important;
  }
  /*iframe, object, embed {
    max-width: 100%!important;
    max-height: 300px!important;
  }*/
}



/* === BLOG === */
p.atom {
  font-style: italic;
  float: right;
}
ul.posts {
  margin: 5rem 0 0;
  padding: 0;
  list-style-type: none;
  clear: both;
}
ul.posts li {
  margin-bottom: 3rem;
  padding-bottom: 3rem;
  border-bottom: solid 1px #eff0f1;
}
ul.posts li:last-of-type {
  border-bottom:none;
}
.postdate {
  font-size: .8rem;
  font-style: italic;
}
.pagination {
  text-align: center;
}
.previous {
  float: left;
}
.next {
  float: right;
}
.meta {
  font-style: italic;
}



/* === DISQUS === */
.notecomments {
  margin: 4rem auto;
}



/* SLICK STUFF */
/* this one below is a fix to use slick inside a flex grid */
* {
  min-height: 0;
  min-width: 0;
}

.slider {
  width: 50%;
  margin: 100px auto;
}

.slick-slide {
  margin: 0;
}

.slick-slide img {
  width: 100%;
}
ul.slick-dots li.slick-active button:before {
  color: #159957;
}

